# wikibook-db

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
ch01/: main.py
ch01/config/: .env.sample  config.py
ch01/dependencies/: auth.py  mysql.py  s3.py
ch01/models/: article.py  board.py  comment.py  jwt_blacklist.py  user.py
ch01/routers/: article.py  comment.py  user.py
ch01/tests/: conftest.py  test_article.py  test_comment.py  test_health_check.py  test_user.py
ch02/: main.py
ch02/config/: .env.sample  config.py
ch02/dependencies/: auth.py  mysql.py  opensearch.py  s3.py
ch02/models/: article.py  board.py  comment.py  jwt_blacklist.py  user.py
ch02/routers/: article.py  comment.py  user.py
ch02/tests/: conftest.py  test_article.py  test_comment.py  test_user.py
ch03/: main.py
ch03/config/: .env.sample  config.py
ch03/dependencies/: auth.py  mysql.py  opensearch.py  s3.py  valkey.py
ch03/models/: advertisement.py  article.py  board.py  comment.py  mixin.py  user.py
ch03/routers/: advertisement.py  article.py  comment.py  user.py
ch03/tests/: conftest.py  test_advertisement.py  test_article.py  test_comment.py  test_user.py
ch04/: main.py
ch04/config/: .env.sample  config.py
ch04/dependencies/: auth.py  mongodb.py  mysql.py  opensearch.py  s3.py  valkey.py
ch04/models/: advertisement.py  article.py  board.py  comment.py  user.py
ch04/routers/: advertisement.py  article.py  comment.py  user.py
ch04/tests/: conftest.py  test_advertisement.py  test_article.py  test_comment.py  test_user.py
ch05/: consumer.py  main.py
ch05/config/: .env.sample  config.py
ch05/dependencies/: auth.py  mongodb.py  mysql.py  opensearch.py  rabbitmq.py  s3.py  valkey.py
ch05/models/: advertisement.py  article.py  board.py  comment.py  user.py
ch05/routers/: advertisement.py  article.py  comment.py  user.py
ch05/tests/: conftest.py  test_advertisement.py  test_article.py  test_comment.py  test_messages.py  test_user.py
src/: exception_handler.py  main.py
src/config/: .env.sample  config.py
src/dependencies/: mysql.py
src/models/mysql/: advertisement.py  article.py  board.py  comment.py  device.py  notice.py  user.py
static/: README.md
tests/: conftest.py  test_health_check.py
